IGNITE-26681 Adjust hero image to avoid covering H1

--- a/docusaurus/src/css/native-persistence.css
+++ b/docusaurus/src/css/native-persistence.css
@@ -1,10 +1,10 @@
-.innerhero__pic--native{
+.innerhero__pic--native {
     width: 49rem;
     height: auto;
     top: auto;
     bottom: -13rem;
     transform: none;
-    left: 75%;
+    left: 80%;
 }
 .native1 {
     padding-top: 12rem;
